<resources>
    <string name="app_name">My Digimind</string>
    <string name="title_home">My Board</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_dashboard">New Reminder</string>
    <string name="what_do_you_want_to_remember_to_do"> What do you want to remember to do?</string>
    <string name="take_my_pill">Take my pill</string>
    <string name="when_do_you_want_to_it">When do you want to it?</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="at_what_time">At what time?</string>
    <string name="set_time">Set Time</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>